# VideoSurveillance

./: CMakeLists.txt  README.md
src/: backgroundSubtraction.cpp  dilation.cpp  erosion.cpp  frameDifferencing.cpp  morphologicalOperations.cpp
